--- a/src/components/ThirdPage/Left2.module.css
+++ b/src/components/ThirdPage/Left2.module.css
@@ -1,18 +1,18 @@
 .container {
-    width: 800px;
-    height: 250px;
+    width: 450px;
+    height: 150px;
     background: #101744;
     border-radius: 30px;
 }
 
 .date_time {
     display: flex;
-    width: 800px;
+    width: 450px;
     background: #FF4ADE;
     height: 30%;
     border-radius: 30px 30px 0 0;
     align-items: center;
-    font-size: 40px;
+    font-size: 30px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -40,20 +40,20 @@
 }
 
 .weather {
-    font-size: 50px;
-    margin-top: 40px;
+    font-size: 18px;
+    margin-top: 10px;
 }
 
 .cloud {
-    font-size: 120px;
+    font-size: 70px;
     height: 40px;
     position: relative;
-    bottom: 40px;
+    bottom: 20px;
     text-align: center;
 }
 
 .degree {
-    font-size: 60px;
+    font-size: 30px;
 }
 
 .pressure {
@@ -73,6 +73,10 @@
     right: 50px;
 }
 
+.wind_container {
+    margin-left: 20px;
+}
+
 .wind {
     margin: 10px 0;
     width: 80px;
@@ -84,17 +88,17 @@
 }
 
 .blow {
-    font-size: 30px;
+    font-size: 20px;
     position: relative;
     height: 0px;
-    right: 50px;
+    right: 35px;
 }
 
 .drop {
-    font-size: 30px;
+    font-size: 20px;
     position: relative;
     height: 0px;
-    right: 40px;
+    right: 30px;
 }
 
 .line {
@@ -102,8 +106,7 @@
     width: 1px;
     font-size: 60px;
     position: relative;
-    right: 70px;
-    top: 20px;
+    right: 40px;
 }
 
 .line2 {
@@ -111,8 +114,8 @@
     width: 1px;
     font-size: 60px;
     position: relative;
-    bottom: 90px;
-    left: 190px;
+    bottom: 75px;
+    left: 100px;
 }
 
 .loading img {
